# rolevatev7

./: .gitignore
rolevate-agent7/: .env.example  .gitignore  docker-compose.yml  ecosystem.config.js  main.py  requirements.txt  test_company_agent.py  test_server.py
rolevate-agent7/aiautocompletion/: __init__.py  company_agent.py  state.py
rolevate-agent7/aiautocompletion/nodes/: analyze_company.py  fetch_data.py
rolevate-agent7/aiautocompletion/tools/: search_tool.py
rolevate-backendgql/: package-lock.json
rolevate-livev7/room-LangGraph/v1/: agent.py  graph.py  pyproject.toml  session_manager.py
rolevate-livev7/room-LangGraph/v3/: .dockerignore  Dockerfile  agent.py  agent.yaml  agent_backup.py  arabic_turn_detector.py  ecosystem.config.js  gpu_config.py  graph.py  graphql_client.py  livekit.toml  migrate_db.py  pyproject.toml  recording_manager.py  session_manager.py  test_admin_agent_api.py  test_backend.py  test_system_api.py
rolevate-livev7/room-LangGraph/v3/nodes/: assistant_node.py
rolevate-livev7/room-LangGraph/v3/state/: assistant_state.py
rolevate-livev7/room-LangGraph/v3/utils/: session_utils.py
rolevatev6/: package-lock.json
rolevatev7/: ecosystem.config.js  package-lock.json  package.json
rolevatev7-backend/: .dockerignore  .env.example  ADMIN_AGENT_API_KEY_USAGE.md  Dockerfile  deploy.sh  docker-compose.yml  ecosystem.config.js  migration-runner.js  package-lock.json  package.json  test-s3.js  test-upload.graphql
rolevatev7-backend/src/: app.module.ts  data-source.ts  main.ts
rolevatev7/.claude/: settings.local.json
(+63 files in other folders)
